ported more features

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "ChromeLL",
-  "version": "2.0.12.502",
+  "version": "2.0.12.505",
   "update_url": "http://www.chairface.org/ext/updates.xml",
   "description": "Enhancements for the forums at the End of the Internet",
   "options_page": "options.html",
@@ -19,6 +19,10 @@
   {
     "matches": ["http://boards.endoftheinter.net/showtopics.php*", "https://boards.endoftheinter.net/showtopics.php*"],
     "js": ["App/src/topicList.js", "App/src/allPages.js"] 
+  },
+  {
+    "matches": ["http://endoftheinter.net/inboxthread.php*", "https://endoftheinter.net/inboxthread.php*", "https://endoftheinter.net/postmsg.php*"],
+    "js": ["App/src/messageList.js", "App/src/allPages.js"] 
   }],
   "permissions": [ "tabs", "notifications", "contextMenus", "webRequest", "webRequestBlocking", "http://*.endoftheinter.net/", "https://*.endoftheinter.net/"]
 }
