user highlight full feature added

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "ChromeLL",
-  "version": "2.0.12.506",
+  "name": "ChromeLL2",
+  "version": "2.0.12.507",
   "update_url": "http://www.chairface.org/ext/updates.xml",
   "description": "Enhancements for the forums at the End of the Internet",
   "options_page": "options.html",
