--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,24 @@
 {
   "name": "ChromeLL",
-  "version": "2.0.12.523",
-  "update_url": "http://www.chairface.org/ext/updates.xml",
+  "version": "2.0.12.553",
+  "manifest_version": 2,
   "description": "Enhancements for the forums at the End of the Internet",
   "options_page": "options.html",
   "minimum_chrome_version": "18.0.193.0",
+  "web_accessible_resources": [ "Style/images/lueshi_48.png", "Style/images/lueshi_128.png", "App/src/like.js" ],
   "icons": {
   	"16": "Style/images/favicon.ico",
 	"48": "Style/images/lueshi_48.png",
 	"128":	"Style/images/lueshi_128.png"
   },
-  "background_page": "background.html",
+  "browser_action": {
+    "default_icon": "Style/images/lueshi.png",
+    "default_title": "ChromeLL",
+    "default_popup": "App/src/popup.html"
+  },
+  "background": {
+    "scripts": ["App/src/vars.json", "App/src/allBg.js", "App/src/transloader.js", "background.js"]
+  },
   "content_scripts": [
   {
     "matches": ["http://boards.endoftheinter.net/showmessages.php*", "https://boards.endoftheinter.net/showmessages.php*", "http://archives.endoftheinter.net/showmessages.php*", "https://archives.endoftheinter.net/showmessages.php*", "http://endoftheinter.net/inboxthread.php*", "https://endoftheinter.net/inboxthread.php*"],
@@ -31,6 +39,10 @@
   {
     "matches": ["http://endoftheinter.net/profile.php*", "https://endoftheinter.net/profile.php*", "http://boards.endoftheinter.net/history.php*", "https://boards.endoftheinter.net/history.php*"],
     "js": ["App/src/allPages.js", "App/src/profile.js"] 
+  },
+  {
+    "matches": ["http://endoftheinter.net/userlist.php*", "https://endoftheinter.net/userlist.php*", "http://endoftheinter.net/stats.php*", "https://endoftheinter.net/stats.php*", "http://endoftheinter.net/userpic_queue.php*", "https://endoftheinter.net/userpic_queue.php*"],
+    "js": ["App/src/allPages.js"]
   }],
-  "permissions": [ "tabs", "notifications", "contextMenus", "webRequest", "webRequestBlocking", "http://*.endoftheinter.net/", "https://*.endoftheinter.net/"]
+  "permissions": [ "tabs", "clipboardWrite", "notifications", "http://*/*", "https://*/*", "contextMenus", "webRequest", "webRequestBlocking"]
 }
