--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "name": "ChromeLL",
-  "version": "2.0.12.559",
+  "version": "2.0.12.560",
   "manifest_version": 2,
   "description": "Enhancements for the forums at the End of the Internet",
   "options_page": "options.html",
-  "minimum_chrome_version": "18.0.193.0",
+  "minimum_chrome_version": "20.0.0.0",
   "web_accessible_resources": [ "Style/images/lueshi_48.png", "Style/images/lueshi_128.png", "App/src/like.js", "App/src/topicPostTemplate.js" ],
   "icons": {
   	"16": "Style/images/favicon.ico",
@@ -44,5 +44,5 @@
     "matches": ["http://endoftheinter.net/userlist.php*", "https://endoftheinter.net/userlist.php*", "http://endoftheinter.net/stats.php*", "https://endoftheinter.net/stats.php*", "http://endoftheinter.net/userpic_queue.php*", "https://endoftheinter.net/userpic_queue.php*"],
     "js": ["App/src/allPages.js"]
   }],
-  "permissions": [ "tabs", "clipboardWrite", "notifications", "http://*/*", "https://*/*", "contextMenus", "webRequest", "webRequestBlocking"]
+  "permissions": [ "tabs", "clipboardWrite", "notifications", "http://*/*", "https://*/*", "contextMenus", "webRequest", "webRequestBlocking", "storage"]
 }
