--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
   "name": "ChromeLL",
-  "version": "2.0.12.570",
+  "version": "2.0.12.579",
   "manifest_version": 2,
   "description": "Enhancements for the forums at the End of the Internet",
   "options_page": "options.html",
   "minimum_chrome_version": "20.0.0.0",
   "web_accessible_resources": [ "Style/images/lueshi_48.png", "Style/images/lueshi_128.png", "App/src/like.js", "App/src/topicPostTemplate.js" ],
   "icons": {
-  	"16": "Style/images/favicon.ico",
-	"48": "Style/images/lueshi_48.png",
+ 	"16": "Style/images/favicon.ico",
+ 	"48": "Style/images/lueshi_48.png",
 	"128":	"Style/images/lueshi_128.png"
   },
   "browser_action": {
@@ -43,6 +43,10 @@
   {
     "matches": ["http://endoftheinter.net/userlist.php*", "https://endoftheinter.net/userlist.php*", "http://endoftheinter.net/stats.php*", "https://endoftheinter.net/stats.php*", "http://endoftheinter.net/userpic_queue.php*", "https://endoftheinter.net/userpic_queue.php*"],
     "js": ["App/src/allPages.js"]
+  },
+  {
+    "matches": ["http://boards.endoftheinter.net/search.php*", "https://boards.endoftheinter.net/search.php*"],
+    "js": ["App/src/search.js"]
   }],
   "permissions": [ "tabs", "clipboardWrite", "notifications", "http://*/*", "https://*/*", "contextMenus", "webRequest", "webRequestBlocking", "storage"]
 }
